# RM-x86-64-Forge

./: .gitignore  CMakeLists.txt  Makefile  README.md  output.txt
output/: 00_all_in_one.txt  01_3-addr_code.txt  02_2-addr_code.txt  03_cfg.txt  04_optimized_2-addr_code.txt  05_interference_graph.txt  06_stack.txt  07_mapping_and_spills.txt  08_final_assembly.txt
src/: main.cc  main.cpp
src/liveness_analysis/: basic_block.cc  basic_block.h  cfg.cc  cfg.h
src/tac_parser/: instruction.cc  instruction.h  three_address_code_parser.cc  three_address_code_parser.h
src/tac_to_2ac/: converter.cc  converter.h  two_address_instruction.cc  two_address_instruction.h
src/test/: test.txt
